# timefly

./: .gitignore  README.md  pyproject.toml
examples/: example.py  tests.py
src/timefly/: kmeans.py  profiling.py  soft_dtw.py  soft_dtw_cuda.py
src/timefly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/timefly/timexer/: TimeXer.py
test/: test_k_means.py  test_soft_dtw.py
test/__pycache__/: test_soft_dtw.cpython-312-pytest-8.3.4.pyc.19888
tests/: test_k_means.py  test_soft_dtw.py
tests/__pycache__/: test_soft_dtw.cpython-312-pytest-8.3.4.pyc.41116
