[project]
name = "timefly"
description = "Lightweight kmeans clustering with cuda"
version = "0.0.1"
requires-python = ">=3.12, <3.13"
dependencies = ["numpy", "numba>=0.59", "torch", "tqdm", "pytest"]

# Comment this out if ur machine does not install the cuda compiled version 
# of torch 

# [tool.uv.sources]
# torch = { index = "pytorch_cuda" }

# [[tool.uv.index]]
# name = 'pytorch_cuda'
# url = "https://download.pytorch.org/whl/cu124"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["timefly"]

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-vv --full-trace"
addopts = "-s"
testpaths = ["tests"]
